fix: section footer text align

--- a/CSS_advanced/styles/17-style.css
+++ b/CSS_advanced/styles/17-style.css
@@ -290,6 +290,7 @@ h6 {
 
 .section-footer {
     padding: var(--section-footer-padding);
+    text-align: var(--section-footer-align);
 }
 
 .section-title {
